AM_CPPFLAGS = -I@top_srcdir@/src/include
AM_CXXFLAGS = @GENERAL_CXXFLAGS@
lib_LTLIBRARIES = libcluster.la
libcluster_la_SOURCES = \
	cacheddataimpl.cc \
	cachedstateimpl.cc \
	cachedkeyvaluesimpl.cc \
	cachedprocessinfoimpl.cc \
	cachedprocessslotinfoimpl.cc \
	cachedshardsimpl.cc \
	registerednotifyableimpl.cc \
	registeredrootimpl.cc \
	registeredapplicationimpl.cc \
	registeredgroupimpl.cc \
	registereddatadistributionimpl.cc \
	registerednodeimpl.cc \
	registeredqueueimpl.cc \
	registeredprocessslotimpl.cc \
	registeredpropertylistimpl.cc \
	safenotifyablemap.cc \
	processthreadservice.cc \
	clusterlibexceptions.cc \
	unknownhashrange.cc \
	json.cc \
	jsonrpc.cc \
	queueimpl.cc \
	processslotimpl.cc \
	callbackandcontext.cc \
	shard.cc \
	notifyableimpl.cc \
	nodeimpl.cc \
	groupimpl.cc \
	applicationimpl.cc \
	datadistributionimpl.cc \
	propertylistimpl.cc \
	rootimpl.cc \
	internalchangehandlers.cc \
	cachedobjectchangehandlers.cc \
	distributedlocks.cc \
	clientimpl.cc \
	clstring.cc \
	clnumeric.cc \
	factory.cc \
	factoryops.cc \
	event.cc \
	mutex.cc \
        notifyablekeymanipulator.cc \
	signalmap.cc \
	thread.cc \
	zkadapter.cc \
	jsonrpcresponsehandler.cc \
	jsonrpcmethodhandler.cc \
	genericrpc.cc \
	clusterlibrpc.cc \
	clusterlibrpcbulkrequest.cc \
	zookeeperperiodiccheck.cc \
	log.cc \
        md5/md5.cc
coredir = $(includedir)/core
dist_core_HEADERS = \
	applicationimpl.h \
	cacheddataimpl.h \
	cachedkeyvaluesimpl.h \
	cachedobjectchangehandlers.h \
	cachedprocessinfoimpl.h \
	cachedprocessslotinfoimpl.h \
	cachedshardsimpl.h \
	cachedstateimpl.h \
	callbackandcontext.h \
	clientimpl.h \
	clnumericinternal.h \
	clstringinternal.h \
	clusterlibinternal.h \
	datadistributionimpl.h \
	distributedlocks.h \
	event.h \
	factoryops.h \
	groupimpl.h \
	internalchangehandlers.h \
	intervaltree.h \
	jsonrpcmethodhandler.h \
	jsonrpcresponsehandler.h \
	nodeimpl.h \
	notifyableimpl.h \
	notifyablekeymanipulator.h \
	processslotimpl.h \
	propertylistimpl.h \
	queueimpl.h \
	registeredapplicationimpl.h \
	registereddatadistributionimpl.h \
	registeredgroupimpl.h \
	registerednodeimpl.h \
	registerednotifyable.h \
	registerednotifyableimpl.h \
	registeredprocessslotimpl.h \
	registeredpropertylistimpl.h \
	registeredqueueimpl.h \
	registeredrootimpl.h \
	rootimpl.h \
	safenotifyablemap.h \
	signalmap.h \
	unknownhashrange.h \
	zkadapter.h \
	zkexceptions.h
SUBDIRS = md5
