include_HEADERS = \
	application.h \
	blockingqueue.h \
	cacheddata.h \
	cachedkeyvalues.h \
	cachedprocessinfo.h \
	cachedprocessslotinfo.h \
	cachedshards.h \
	cachedstate.h \
	client.h \
	clnumeric.h \
	clstring.h \
	clusterlib.h \
	clusterlibexceptions.h \
	clusterlibrpc.h \
	clusterlibrpcbulkrequest.h \
	datadistribution.h \
	factory.h \
	forwarddecls.h \
	genericrpc.h \
	group.h \
	hashrange.h \
	healthchecker.h \
	json.h \
	jsonexceptions.h \
	jsonrpc.h \
	log.h \
	mutex.h \
	node.h \
	notifyable.h \
	periodic.h \
	processslot.h \
	processthreadservice.h \
	propertylist.h \
	queue.h \
	root.h \
	shard.h \
	startprocessrpc.h \
	stopprocessrpc.h \
	thread.h \
	timerservice.h \
	uint64hashrange.h \
	zookeeperperiodiccheck.h
